--- a/css/live.css
+++ b/css/live.css
@@ -5663,6 +5663,11 @@ h6 {
   }
 }
 
+@media only screen and (max-width: 991px) {
+  .list-channel-wrapper {
+    padding: 12px;
+  }
+}
 .list-channel-wrapper .title {
   font-size: 18px;
   font-weight: 700;
@@ -5671,7 +5676,11 @@ h6 {
 .list-channel-wrapper .list-channel {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+}
+@media only screen and (max-width: 991px) {
+  .list-channel-wrapper .list-channel {
+    justify-content: space-between;
+  }
 }
 .list-channel-wrapper .list-channel .channel-item {
   min-width: 140px;
@@ -5682,10 +5691,26 @@ h6 {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  margin-right: 8px;
+  margin-bottom: 8px;
   background-color: rgb(204, 204, 204);
+}
+@media only screen and (max-width: 991px) {
+  .list-channel-wrapper .list-channel .channel-item {
+    min-width: calc((100% - 24px) / 4);
+    max-width: calc((100% - 24px) / 4);
+    height: 80px;
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
 }
 .list-channel-wrapper .list-channel .channel-item svg {
   transform: scale(2);
+}
+@media only screen and (max-width: 991px) {
+  .list-channel-wrapper .list-channel .channel-item svg {
+    transform: scale(1.5);
+  }
 }
 .list-channel-wrapper .list-channel .channel-item img, .list-channel-wrapper .list-channel .channel-item svg {
   transition: all 0.3s ease;
@@ -5697,8 +5722,18 @@ h6 {
 .list-channel-wrapper .list-channel .channel-item:hover img {
   transform: scale(1.5);
 }
+@media only screen and (max-width: 991px) {
+  .list-channel-wrapper .list-channel .channel-item:hover img {
+    transform: scale(1.3);
+  }
+}
 .list-channel-wrapper .list-channel .channel-item:hover svg {
   transform: scale(3);
+}
+@media only screen and (max-width: 991px) {
+  .list-channel-wrapper .list-channel .channel-item:hover svg {
+    transform: scale(2);
+  }
 }
 .list-channel-wrapper .list-channel .active {
   background-color: rgba(249, 30, 78, 0.1);
